--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/BGClock/vite.svg" />
+    <link rel="icon"  href="/BGClock/clockicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Svelte + TS</title>
+    <title>Alex' Amazing Boardgame Clock</title>
     <script type="module" crossorigin src="/BGClock/assets/index.626a4949.js"></script>
     <link rel="stylesheet" href="/BGClock/assets/index.b2611231.css">
   </head>
